# mastodon-apps

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  847  README.md  fish  jucika-data.yaml  printer  pyproject.toml  setup.py  tox.ini
.github/workflows/: pre-commit.yml
.woodpecker/: pre-commit.yaml
lib/: __init__.py
mastodon_apps/: eightfortyseven.py  fish.py  jucika.py  printer.py
mastodon_apps/mastodon/: __init__.py
