# SPDX-PackageSummary: mastodon-apps
# SPDX-FileCopyrightText: Copyright (C) 2023-2025 Ryan Finnie
# SPDX-License-Identifier: MPL-2.0

[project]
name = "mastodon-apps"
authors = [
    {name = "Ryan Finnie", email = "ryan@finnie.org"},
]
description = "Mastodon apps"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MPL-2.0"}
dependencies = [
    "Pillow",
    "PyYAML",
    "Unidecode",
    'backports.zoneinfo; python_version<"3.9"',
    "beautifulsoup4",
    "blurhash-python",
    "python-dateutil",
    "requests",
    "urlextract",
]
dynamic = ["version"]

[project.scripts]
mastodon-app-eightfortyseven = "mastodon_apps.eightfortyseven:main"
mastodon-app-fish = "mastodon_apps.fish:main"
mastodon-app-jucika = "mastodon_apps.jucika:main"
mastodon-app-printer = "mastodon_apps.printer:main"

[tool.black]
line-length = 132

# https://pypi.org/project/Flake8-pyproject/
[tool.flake8]
max-line-length = 132
